[package]
name = "thething"
version = "0.1.0"
authors = ["13jon37 <jonlockllyr2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "*"
default_feautres = false
features = ["image"]
